fix background cropped on -50% zoom

--- a/packages/client/src/styles/components/auth-page.module.css
+++ b/packages/client/src/styles/components/auth-page.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -147,7 +147,6 @@
   display: block;
   position: relative;
   margin-top: 5px;
-
   margin-bottom: 10px;
   font-size: calc(30px + min(5vw, 20px));
 }
